# backend/src/posts/posts.controller.ts
@@ -8,49 +8,51 @@ import {
   Delete,
   Put,
   Query,
-} from '@nestjs/common';
-import { PostsService } from './posts.service';
-import { CreatePostDto } from './dto/create-post.dto';
-import { UpdatePostDto } from './dto/update-post.dto';
-import { PostQuery } from './entities/post-query.entity';
+} from '@nestjs/common'
+import { PostsService } from './posts.service'
+import { CreatePostDto } from './dto/create-post.dto'
+import { UpdatePostDto } from './dto/update-post.dto'
+import { PostQuery } from './entities/post-query.entity'
+import { ApiTags } from '@nestjs/swagger'
 
+@ApiTags('posts')
 @Controller('posts')
 export class PostsController {
   constructor(private readonly postsService: PostsService) {}
 
   @Post()
   create(@Body() createPostDto: CreatePostDto) {
-    return this.postsService.create(createPostDto);
+    return this.postsService.create(createPostDto)
   }
 
   @Get()
   findAll(@Query() query: PostQuery) {
-    return this.postsService.findAll();
+    return this.postsService.findAll()
   }
 
   @Get(':id')
   findOne(@Param('id') id: string) {
-    return this.postsService.findOne(+id);
+    return this.postsService.findOne(+id)
   }
 
   // Maybe to update comment description
   @Patch(':id')
   update(@Param('id') id: string, @Body() updatePostDto: UpdatePostDto) {
-    return this.postsService.update(+id, updatePostDto);
+    return this.postsService.update(+id, updatePostDto)
   }
 
   @Delete(':id')
   remove(@Param('id') id: string) {
-    return this.postsService.remove(+id);
+    return this.postsService.remove(+id)
   }
 
   //Likes
   @Put(':id/like')
-  like() {
+  like(@Param('id') id: string) {
     // TODO Hier auch entscheiden, ob like hinzugefügt wird oder nicht
   }
   @Put(':id/dislike')
-  dislike() {
+  dislike(@Param('id') id: string) {
     // TODO Hier auch entscheiden, ob like hinzugefügt wird oder nicht
   }
 }
